# CFDSolver

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
CFDSolver/: BoundaryControl.cpp  BoundaryControl.hpp  FairMutex.hpp  FlagField.hpp  Helper.cpp  Helper.hpp  Interface.cpp  Interface.hpp  PhysicalField.hpp  Plotter.hpp  Solver.hpp  SolverFaceVelocity.hpp  SolverFaceVelocityV2.hpp  Solver_Staggered_Explicit.hpp  Solver_Staggered_IMEX.hpp  Solver_Staggered_IMEX_Temp.hpp  main.cpp
